--- a/src/main/resources/templates/lesson04/afterAddSeller.html
+++ b/src/main/resources/templates/lesson04/afterAddSeller.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>입력 성공!</title>
+<title>결과</title>
 </head>
 <body>
 	<h1>입력 성공!</h1>
