--- a/src/main/resources/templates/lesson06/bookmarkList.html
+++ b/src/main/resources/templates/lesson06/bookmarkList.html
@@ -9,22 +9,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </head>
 <body>
-	<h1>즐겨 찾기 목록</h1>
-	<table class="table text-center">
-		<thead>
-			<tr>
-				<th>No.</th>
-				<th>제목</th>
-				<th>주소</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="bookmark, status : ${bookmarkList}">
-				<td th:text="${status.count}"></td>
-				<td th:text="${bookmark.title}"></td>
-				<td th:text="${bookmark.address}"></td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="container">
+		<h1>즐겨 찾기 목록</h1>
+		<table class="table text-center">
+			<thead>
+				<tr>
+					<th>No.</th>
+					<th>제목</th>
+					<th>주소</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="bookmark: ${bookmarkList}">
+					<td th:text="${bookmark.id}">No</td>
+					<td th:text="${bookmark.name}">제목</td>
+					<td>
+						<a th:href="${bookmark.url}" th:text="${bookmark.url}"></a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
