--- a/src/main/resources/templates/lesson06/addBookmark.html
+++ b/src/main/resources/templates/lesson06/addBookmark.html
@@ -20,9 +20,10 @@
 			<label for="url">URL 주소</label>
 			<div class="d-flex">
 				<input type="text" id="url" class="form-control col-11">
-				<button type="button" id="urlCheckBtn" class="btn btn-info">중복확인</button>
+				<button type="button" id="duplicationBtn" class="btn btn-info">중복확인</button>
 			</div>
-			<small id="urlStatusArea"></small>
+			<small id="duplicationText" class="text-danger d-none">중복된 url 입니다.</small>
+			<small id="availableText" class="text-success d-none">저장 가능한 url입니다.</small>
 		</div>
 		
 		<button type="button" id="addBtn" class="btn btn-success btn-block">추가</button>
@@ -30,6 +31,45 @@
 	
 	<script>
 		$(document).ready(function() {
+			
+			// 중복확인 버튼 클릭
+    		$("#duplicationBtn").on('click', function() {
+    			// alert("중복확인");
+    			// nameStatusArea 초기화 하고 시작
+    			$("#urlStatusArea").empty(); // 자식 태그 모두 비움
+    			
+    			let url = $("#url").val().trim();
+    			if (!url) {
+    				alter("url을 입력하세요")
+    				return;
+    			}
+
+    			// AJAX 중복 확인(DB)
+    			$.ajax({
+    				// request
+    				type:"POST"
+    				, url:"/lesson06/is-duplication-url"
+    				, data:{"url":url}
+    				
+    				// response
+    				, success:function(data) {
+    					// {"code":200, "is_duplication":true} => 중복
+    					if (data.is_duplication == true) {  // 중복
+    						$("#duplicationText").removeClass("d-none");
+    						$("#availableText").addClass("d-none");
+    					} else {  // 중복 아님 => 사용 가능
+    						$("#duplicationText").addClass("d-none");
+    						$("#availableText").removeClass("d-none");
+    					}
+    				}
+    				, error:function(error) {
+    					alert("url 중복확인에 실패했습니다.");
+    				}
+    			});
+    		});
+			
+			
+			// 추가 버튼
 			$("#addBtn").on('click', function() {
 				// alert("버튼 클릭")
 				
@@ -80,35 +120,7 @@
 			}); //-- 추가 버튼 이벤트 끝
 			
 			
-			// 중복확인 버튼 클릭
-    		$("#urlCheckBtn").on('click', function() {
-    			// alert("중복확인");
-    			// nameStatusArea 초기화 하고 시작
-    			$("#urlStatusArea").empty(); // 자식 태그 모두 비움
-    			
-    			let url = $("#url").val().trim();
-
-    			// AJAX 중복 확인(DB)
-    			$.ajax({
-    				// request
-    				type:"GET" // GET이면 생략 가능
-    				, url:"/lesson06/is-duplication-url"
-    				, data:{"url":url}
-    				
-    				// response
-    				, success:function(data) {
-    					// {"code":200, "is_duplication":true} => 중복
-    					if (data.is_duplication == true) {
-    						$("#urlStatusArea").append('<span class="text-danger">중복된 url 입니다.</span>');
-    					} else {
-    						$("#urlStatusArea").append('<span class="text-danger">저장 가능한 url 입니다.</span>');
-    					}
-    				}
-    				, error:function(error) {
-    					alert("url 중복확인에 실패했습니다.");
-    				}
-    			});
-    		});
+			
 		}); //-- ready 끝
 	</script>
 </body>
