--- a/src/main/resources/templates/booking/bookingList.html
+++ b/src/main/resources/templates/booking/bookingList.html
@@ -23,9 +23,9 @@
 	            <li class="nav-item"><a href="#" class="nav-link text-white">커뮤니티</a></li>
 	        </ul>
 	    </nav>
-		<div class="container">
-			<h3 class="font-weight-bold text-center">예약 목록 보기</h3>
-			<table class="table text-center">
+		<section class="container">
+			<h2 class="text-center font-weight-bold m-4" th:text="'예약 목록 보기'"></h2>
+	        <table class="table text-center">
 				<thead>
 					<tr>
 						<th>이름</th>
@@ -40,18 +40,61 @@
 				<tbody>
 					<tr th:each="booking : ${bookingList}">
 						<td th:text="${booking.name}"></td>
+						<td th:text="${#temporals.format(booking.date, 'yyyy년 M월 d일')}"></td>
 						<td th:text="${booking.day}"></td>
-						<td th:text="${booking.date}"></td>
 						<td th:text="${booking.headcount}"></td>
 						<td th:text="${booking.phoneNumber}"></td>
-						<td th:text="${booking.state}"></td>
+						<td th:switch="${booking.state}">
+							<span th:case="'대기중'"  th:text="${booking.state}" class="text-info"></span>
+							<span th:case="'확정'"  th:text="${booking.state}" class="text-success"></span>
+							<span th:case="'취소'"  th:text="${booking.state}" class="text-danger"></span>
+						</td>
 						<td>
-							<button type="button" id="deleteBtn" class="del-btn btn btn-danger" th:data-bookmark-id="${booking.id}">삭제</button>
+							<button type="button" id="deleteBtn" class="del-btn btn btn-danger" th:data-bookmark-id="${booking.id}" th:data-booking-id="${booking.id}">삭제</button>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-		</div>
+		</section>
+		<footer>
+	        <small class="text-secondary">
+	            제주특별자치도 제주시 애월읍<br>
+	            사업자등록번호: 111-22-255222 / 농어촌민박사업자지정 / 대표:김통목<br>
+	            Copyright 20XX tongnamu. All right reserved.
+	        </small>
+	    </footer>
 	</div>
+	
+	<script>
+		$(document).ready(function(){
+			// 삭제 클릭
+			$(".del-btn").on('click', function(){
+				let id = $(this).data('booking-id');
+				//alert(id);
+				
+				$.ajax({
+					// request
+					type:"delete"
+					, url:"/booking/delete-booking"
+					, data:{"id":id}
+					
+					// response
+					, success:function(data) {
+						// {"code":200, "result":"성공"}
+						if (data.code == 200) {
+							alert("삭제되었습니다.");
+							location.reload(true);
+						} else if (data.code == 500) {
+							// {"code":500, "error_message":"에러의 원인"}
+							alert(data.error_message);
+						}
+					}
+					, error:function(error) {
+						alert("삭제하는데 실패했습니다. 관리자에게 문의해주세요.");
+					}
+				});
+			});
+		});
+	</script>
 </body>
 </html>
