--- a/src/main/resources/templates/booking/bookingList.html
+++ b/src/main/resources/templates/booking/bookingList.html
@@ -16,16 +16,16 @@
 			<div class="text-center display-4">통나무 펜션</div>
 		</header>
 		<nav>
-	        <ul class="nav nav-fill font-weight-bold">
-	            <li class="nav-item"><a href="#" class="nav-link text-white">펜션소개</a></li>
-	            <li class="nav-item"><a href="#" class="nav-link text-white">객실소개</a></li>
-	            <li class="nav-item"><a href="#" class="nav-link text-white">예약안내</a></li>
-	            <li class="nav-item"><a href="#" class="nav-link text-white">커뮤니티</a></li>
+	        <ul class="nav nav-fill">
+	            <li class="nav-item"><a href="#" class="nav-link text-white font-weight-bold" th:text="'팬션소개'"></a></li>
+	            <li class="nav-item"><a href="#" class="nav-link text-white font-weight-bold" th:text="'객실보기'"></a></li>
+	            <li class="nav-item"><a href="/booking/make-booking-view" class="nav-link text-white font-weight-bold" th:text="'예약하기'"></a></li>
+	            <li class="nav-item"><a href="/booking/booking-list-view" class="nav-link text-white font-weight-bold" th:text="'예약목록'"></a></li>
 	        </ul>
 	    </nav>
-		<div class="container">
-			<h3 class="font-weight-bold text-center">예약 목록 보기</h3>
-			<table class="table text-center">
+		<section class="contents py-4">
+	        <h2 class="text-center font-weight-bold m-4" th:text="'예약 목록 보기'"></h2>
+	        <table class="table text-center">
 				<thead>
 					<tr>
 						<th>이름</th>
@@ -44,14 +44,65 @@
 						<td th:text="${booking.date}"></td>
 						<td th:text="${booking.headcount}"></td>
 						<td th:text="${booking.phoneNumber}"></td>
-						<td th:text="${booking.state}"></td>
+						<td th:switch="${booking.state}">
+							<span th:case="'대기중'" th:text="${booking.state}" class="text-info"></span>
+							<span th:case="'확정'" th:text="${booking.state}" class="text-success"></span>
+							<span th:case="*" th:text="${booking.state}"></span>  <!-- *: default 값 -->			
+						</td>
 						<td>
-							<button type="button" id="deleteBtn" class="del-btn btn btn-danger" th:data-bookmark-id="${booking.id}">삭제</button>
+							<button type="button" id="deleteBtn" class="del-btn btn btn-danger" th:data-booking-id="${booking.id}">삭제</button>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-		</div>
+		</section>
+		<footer>
+			<small class="text-secondary">
+	            제주특별자치도 제주시 애월읍<br>
+	            사업자등록번호: 111-22-255222 / 농어촌민박사업자지정 / 대표:김통목<br>
+	            Copyright 20XX tongnamu. All right reserved.
+	        </small>
+	    </footer>
 	</div>
+	
+	<script>
+		$(document).ready(function() {
+			// 삭제 버튼 클릭
+			$(".del-btn").on('click', function(e) {
+				// 1) value로 가져오기
+				// let id = $(this).val();
+				// let id = $(this).attr("value");
+				// let id = e.target.value;
+				
+				// 2) data로 가져오기
+				// 태그에 이름짓기: data-bookmark-id
+				// 스크립트에서 꺼내기: .data("bookmark-id")
+				let id = $(this).data("booking-id");
+				// alert(id);
+				
+				$.ajax({
+					// request
+					type:"delete"
+					, url:"/booking/delete-booking"
+					, data:{"id":id}
+						
+					// response
+					, success:function(data) {
+						// 성공
+						if (data.code == 200) {
+							// 성공
+							location.reload(true); // 새로고침 - 스크롤이 유지됨
+						} else if (data.code == 500) {
+							// 로직 상 실패
+							alert(data.error_message);
+						}
+					}
+					, error:function(error) {
+						alert("삭제하는데 실패했습니다.")
+					}
+				})
+			});
+		})
+	</script>
 </body>
 </html>
