--- a/src/main/resources/templates/booking/bookingList.html
+++ b/src/main/resources/templates/booking/bookingList.html
@@ -2,20 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>예약 목록</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" type="text/css" th:href="@{/css/booking/style.css}">
+    <link rel="stylesheet" type="text/css" href="/css/booking/style.css">
 </head>
 <body>
 	<div id="wrap" class="container">
-		<header class="d-flex justify-content-center align-items-center">
-			<div class="text-center display-4">통나무 펜션</div>
-		</header>
-		<nav>
+	    <header class="d-flex justify-content-center align-items-center">
+	        <div class="display-4">통나무 펜션</div>
+	    </header>
+	    <nav>
 	        <ul class="nav nav-fill">
 	            <li class="nav-item"><a href="#" class="nav-link text-white font-weight-bold" th:text="'팬션소개'"></a></li>
 	            <li class="nav-item"><a href="#" class="nav-link text-white font-weight-bold" th:text="'객실보기'"></a></li>
@@ -23,105 +23,60 @@
 	            <li class="nav-item"><a href="/booking/booking-list-view" class="nav-link text-white font-weight-bold" th:text="'예약목록'"></a></li>
 	        </ul>
 	    </nav>
-<<<<<<< HEAD
-		<section class="contents py-4">
+	    <section class="contents py-4">
 	        <h2 class="text-center font-weight-bold m-4" th:text="'예약 목록 보기'"></h2>
-=======
-		<section class="container">
-			<h2 class="text-center font-weight-bold m-4" th:text="'예약 목록 보기'"></h2>
->>>>>>> origin/develop
 	        <table class="table text-center">
-				<thead>
-					<tr>
-						<th>이름</th>
-						<th>예약날짜</th>
-						<th>숙박일수</th>
-						<th>숙박인원</th>
-						<th>전화번호</th>
-						<th>예약상태</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="booking : ${bookingList}">
-						<td th:text="${booking.name}"></td>
-						<td th:text="${#temporals.format(booking.date, 'yyyy년 M월 d일')}"></td>
-						<td th:text="${booking.day}"></td>
-						<td th:text="${booking.headcount}"></td>
-						<td th:text="${booking.phoneNumber}"></td>
-						<td th:switch="${booking.state}">
-<<<<<<< HEAD
-							<span th:case="'대기중'" th:text="${booking.state}" class="text-info"></span>
-							<span th:case="'확정'" th:text="${booking.state}" class="text-success"></span>
-							<span th:case="*" th:text="${booking.state}"></span>  <!-- *: default 값 -->			
-						</td>
-						<td>
-							<button type="button" id="deleteBtn" class="del-btn btn btn-danger" th:data-booking-id="${booking.id}">삭제</button>
-=======
-							<span th:case="'대기중'"  th:text="${booking.state}" class="text-info"></span>
-							<span th:case="'확정'"  th:text="${booking.state}" class="text-success"></span>
-							<span th:case="'취소'"  th:text="${booking.state}" class="text-danger"></span>
-						</td>
-						<td>
-							<button type="button" id="deleteBtn" class="del-btn btn btn-danger" th:data-bookmark-id="${booking.id}" th:data-booking-id="${booking.id}">삭제</button>
->>>>>>> origin/develop
-						</td>
-					</tr>
-				</tbody>
+	            <thead>
+	                <tr>
+	                    <th>이름</th>
+	                    <th>예약날짜</th>
+	                    <th>숙박일수</th>
+	                    <th>숙박인원</th>
+	                    <th>전화번호</th>
+	                    <th>예약상태</th>
+	                    <th></th>
+	                </tr>
+	            </thead>
+	            <tbody>
+	            	<tr th:each="booking : ${bookingList}">
+	            		<td th:text="${booking.name}"></td>
+	            		<td th:text="${#temporals.format(booking.date, 'yyyy년 M월 d일')}"></td>
+	            		<td th:text="${booking.day}"></td>
+	            		<td th:text="${booking.headcount}"></td>
+	            		<td th:text="${booking.phoneNumber}"></td>
+	            		<td>
+	            			<span th:if="${booking.state == '대기중'}" class="text-info" th:text="${booking.state}"></span>
+	            			<span th:if="${booking.state == '확정'}" class="text-success" th:text="${booking.state}"></span>
+	            			<span th:if="${booking.state == '취소'}" class="text-danger" th:text="${booking.state}"></span>
+	            		</td>
+	            		<td>
+	            			<button type="button" class="del-btn btn btn-danger" th:text="'삭제'" th:data-booking-id="${booking.id}"></button>
+	            		</td>
+	            	</tr>
+	            </tbody>
 			</table>
-		</section>
-		<footer>
-<<<<<<< HEAD
-			<small class="text-secondary">
-=======
+	    </section>
+	    <footer>
 	        <small class="text-secondary">
->>>>>>> origin/develop
 	            제주특별자치도 제주시 애월읍<br>
 	            사업자등록번호: 111-22-255222 / 농어촌민박사업자지정 / 대표:김통목<br>
 	            Copyright 20XX tongnamu. All right reserved.
 	        </small>
 	    </footer>
-	</div>
+	</div> 
 	
 	<script>
-<<<<<<< HEAD
 		$(document).ready(function() {
-			// 삭제 버튼 클릭
-			$(".del-btn").on('click', function(e) {
-				// 1) value로 가져오기
-				// let id = $(this).val();
-				// let id = $(this).attr("value");
-				// let id = e.target.value;
-				
-				// 2) data로 가져오기
-				// 태그에 이름짓기: data-bookmark-id
-				// 스크립트에서 꺼내기: .data("bookmark-id")
-				let id = $(this).data("booking-id");
-				// alert(id);
-=======
-		$(document).ready(function(){
 			// 삭제 클릭
-			$(".del-btn").on('click', function(){
+			$(".del-btn").on('click', function() {
 				let id = $(this).data('booking-id');
 				//alert(id);
->>>>>>> origin/develop
 				
 				$.ajax({
 					// request
 					type:"delete"
 					, url:"/booking/delete-booking"
 					, data:{"id":id}
-<<<<<<< HEAD
-						
-					// response
-					, success:function(data) {
-						// 성공
-						if (data.code == 200) {
-							// 성공
-							location.reload(true); // 새로고침 - 스크롤이 유지됨
-						} else if (data.code == 500) {
-							// 로직 상 실패
-=======
 					
 					// response
 					, success:function(data) {
@@ -131,24 +86,18 @@
 							location.reload(true);
 						} else if (data.code == 500) {
 							// {"code":500, "error_message":"에러의 원인"}
->>>>>>> origin/develop
 							alert(data.error_message);
 						}
 					}
 					, error:function(error) {
-<<<<<<< HEAD
-						alert("삭제하는데 실패했습니다.")
-					}
-				})
-			});
-		})
-=======
 						alert("삭제하는데 실패했습니다. 관리자에게 문의해주세요.");
 					}
 				});
 			});
 		});
->>>>>>> origin/develop
-	</script>
+	</script>     
 </body>
 </html>
+
+
+
